fixes directories and package version

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "pcap_reader_mirai = PcapReader(\"data/mirai.pcap\")\n",
     "pcap_reader_benign = PcapReader(\"data/benign.pcapng\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(pcap_reader_benign)"
    ]
   },
   {
@@ -48,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pcap_to_dataframe(pcap_reader: pcap_reader) -> pd.DataFrame:\n",
+    "def pcap_to_dataframe(pcap_reader: PcapReader) -> pd.DataFrame:\n",
     "    # Create an empty list to store the data\n",
     "    data = []\n",
     "\n",
@@ -121,8 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirai_df = pd.read_pickle(\"../data/bsides_aug/mirai.pkl\")\n",
-    "benign_df = pd.read_pickle(\"../data/bsides_aug/benign.pkl\")"
+    "mirai_df = pd.read_pickle(\"data/mirai.pkl\")\n",
+    "benign_df = pd.read_pickle(\"data/benign.pkl\")"
    ]
   },
   {
@@ -735,8 +744,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add malware labels\n",
-    "stream_df_engineered[\"Labels\"] = 1\n",
+    "# add labels, 0 for benign, 1 for malicious\n",
+    "mirai_stream_df_engineered[\"Labels\"] = 1\n",
+    "benign_stream_df_engineered[\"Labels\"] = 0\n",
     "stream_df_engineered"
    ]
   },
