fixes word2vec, adds benign and one-hot

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -96,10 +96,33 @@
     "            packet_len = len(packet)\n",
     "\n",
     "        # Append the data to the list\n",
-    "        data.append([packet.time, src_ip, dst_ip, src_port, dst_port, payload, packet_len, protocol])\n",
+    "        data.append(\n",
+    "            [\n",
+    "                packet.time,\n",
+    "                src_ip,\n",
+    "                dst_ip,\n",
+    "                src_port,\n",
+    "                dst_port,\n",
+    "                payload,\n",
+    "                packet_len,\n",
+    "                protocol,\n",
+    "            ]\n",
+    "        )\n",
     "\n",
     "    # Convert the list to a pandas dataframe\n",
-    "    df = pd.DataFrame(data, columns=['Timestamp', 'Source IP', 'Destination IP', 'Source Port', 'Destination Port', 'Payload', 'Packet Length', 'Protocol'])\n",
+    "    df = pd.DataFrame(\n",
+    "        data,\n",
+    "        columns=[\n",
+    "            \"Timestamp\",\n",
+    "            \"Source IP\",\n",
+    "            \"Destination IP\",\n",
+    "            \"Source Port\",\n",
+    "            \"Destination Port\",\n",
+    "            \"Payload\",\n",
+    "            \"Packet Length\",\n",
+    "            \"Protocol\",\n",
+    "        ],\n",
+    "    )\n",
     "\n",
     "    return df"
    ]
@@ -543,7 +566,9 @@
    "source": [
     "# convert IPs to numeric mirai data\n",
     "mirai_stream_df[\"Source IP Numeric\"] = mirai_stream_df[\"Source IP\"].apply(ip_to_numeric)\n",
-    "mirai_stream_df[\"Destination IP Numeric\"] = mirai_stream_df[\"Destination IP\"].apply(ip_to_numeric)"
+    "mirai_stream_df[\"Destination IP Numeric\"] = mirai_stream_df[\"Destination IP\"].apply(\n",
+    "    ip_to_numeric\n",
+    ")"
    ]
   },
   {
@@ -553,8 +578,12 @@
    "outputs": [],
    "source": [
     "# convert IPs to numeric benign data\n",
-    "benign_stream_df[\"Source IP Numeric\"] = benign_stream_df[\"Source IP\"].apply(ip_to_numeric)\n",
-    "benign_stream_df[\"Destination IP Numeric\"] = benign_stream_df[\"Destination IP\"].apply(ip_to_numeric)"
+    "benign_stream_df[\"Source IP Numeric\"] = benign_stream_df[\"Source IP\"].apply(\n",
+    "    ip_to_numeric\n",
+    ")\n",
+    "benign_stream_df[\"Destination IP Numeric\"] = benign_stream_df[\"Destination IP\"].apply(\n",
+    "    ip_to_numeric\n",
+    ")"
    ]
   },
   {
@@ -565,7 +594,9 @@
    "source": [
     "# get rid of non numeric columns for IPs\n",
     "mirai_stream_df_numeric = mirai_stream_df.drop(columns=[\"Source IP\", \"Destination IP\"])\n",
-    "benign_stream_df_numeric = benign_stream_df.drop(columns=[\"Source IP\", \"Destination IP\"])"
+    "benign_stream_df_numeric = benign_stream_df.drop(\n",
+    "    columns=[\"Source IP\", \"Destination IP\"]\n",
+    ")"
    ]
   },
   {
@@ -701,7 +732,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirai_stream_df_engineered[\"Payload_vectors\"] = mirai_stream_df_engineered[\"Payload\"].apply(\n",
+    "mirai_stream_df_engineered[\"Payload_vectors\"] = mirai_stream_df_engineered[\n",
+    "    \"Payload\"\n",
+    "].apply(\n",
     "    lambda payload: mirai_model.wv[simple_preprocess(payload)]\n",
     "    if simple_preprocess(payload)\n",
     "    else None\n",
@@ -714,11 +747,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "benign_stream_df_engineered[\"Payload_vectors\"] = benign_stream_df_engineered[\"Payload\"].apply(\n",
-    "    lambda payload: benign_model.wv[simple_preprocess(payload)]\n",
-    "    if simple_preprocess(payload)\n",
-    "    else None\n",
-    ")"
+    "benign_stream_df_engineered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def try_preprocess(payload, model):\n",
+    "    try:\n",
+    "        if simple_preprocess(payload):\n",
+    "            return model.wv[simple_preprocess(payload)]\n",
+    "        else:\n",
+    "            return None\n",
+    "    except KeyError:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# benign_stream_df_engineered[\"Payload_vectors\"] = benign_stream_df_engineered[\"Payload\"].apply(\n",
+    "#     lambda payload: benign_model.wv[simple_preprocess(payload)]\n",
+    "#     if simple_preprocess(payload)\n",
+    "#     else None\n",
+    "# )\n",
+    "benign_stream_df_engineered[\"Payload_vectors\"] = benign_stream_df_engineered[\n",
+    "    \"Payload\"\n",
+    "].apply(lambda payload: try_preprocess(payload, benign_model))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_stream_df_engineered.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def one_hot_encode(df, feature):\n",
+    "    feature_dummies = pd.get_dummies(df[feature], prefix=\"Source port\")\n",
+    "    return pd.concat([df, feature_dummies], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_stream_df_engineered = one_hot_encode(mirai_stream_df_engineered, \"Source Port\")\n",
+    "mirai_stream_df_engineered = one_hot_encode(\n",
+    "    mirai_stream_df_engineered, \"Destination Port\"\n",
+    ")\n",
+    "mirai_stream_df_engineered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benign_stream_df_engineered = one_hot_encode(benign_stream_df_engineered, \"Source Port\")\n",
+    "benign_stream_df_engineered = one_hot_encode(\n",
+    "    benign_stream_df_engineered, \"Destination Port\"\n",
+    ")\n",
+    "benign_stream_df_engineered"
    ]
   },
   {
@@ -746,8 +853,7 @@
    "source": [
     "# add labels, 0 for benign, 1 for malicious\n",
     "mirai_stream_df_engineered[\"Labels\"] = 1\n",
-    "benign_stream_df_engineered[\"Labels\"] = 0\n",
-    "stream_df_engineered"
+    "benign_stream_df_engineered[\"Labels\"] = 0"
    ]
   },
   {
@@ -759,16 +865,9 @@
     "- models\n",
     "  - xgboost\n",
     "  - NN\n",
+    "  - k-NN\n",
+    "  - Random Forest\n",
     "- k-fold cross validation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# what are we training for? benign vs malicious"
    ]
   }
  ],
