--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -15,6 +15,9 @@
     "from scapy.all import PcapReader, IP, TCP, UDP, ICMP\n",
     "from scipy.stats import ttest_ind, kstest, norm, skew, kurtosis, zscore\n",
     "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
     "from skimpy import skim\n",
     "from summarytools import dfSummary\n",
     "from gensim.models import Word2Vec\n",
@@ -783,12 +786,42 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Labeling\n",
+    "We label and concatenate benign and malicious before one-hot because there are different ports in each dataset and concatenating the two after one hot will not work with different columns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirai_stream_df_engineered.dtypes"
+    "# add labels, 0 for benign, 1 for malicious\n",
+    "mirai_stream_df_engineered[\"Labels\"] = 1\n",
+    "benign_stream_df_engineered[\"Labels\"] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# concatenate dataframes\n",
+    "data_df = pd.concat([mirai_stream_df_engineered, benign_stream_df_engineered], ignore_index=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Feature engineering categorical \n",
+    "## One-hot"
    ]
   },
   {
@@ -808,24 +841,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mirai_stream_df_engineered = one_hot_encode(mirai_stream_df_engineered, \"Source Port\")\n",
-    "mirai_stream_df_engineered = one_hot_encode(\n",
-    "    mirai_stream_df_engineered, \"Destination Port\"\n",
-    ")\n",
-    "mirai_stream_df_engineered"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "benign_stream_df_engineered = one_hot_encode(benign_stream_df_engineered, \"Source Port\")\n",
-    "benign_stream_df_engineered = one_hot_encode(\n",
-    "    benign_stream_df_engineered, \"Destination Port\"\n",
-    ")\n",
-    "benign_stream_df_engineered"
+    "data_df = one_hot_encode(data_df, \"Source Port\")\n",
+    "data_df = one_hot_encode(data_df, \"Destination Port\")"
    ]
   },
   {
@@ -842,7 +859,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Labeling"
+    "# Model Training\n",
+    "- models\n",
+    "  - xgboost\n",
+    "  - NN\n",
+    "  - k-NN\n",
+    "  - Random Forest\n",
+    "- k-fold cross validation"
    ]
   },
   {
@@ -851,23 +874,116 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add labels, 0 for benign, 1 for malicious\n",
-    "mirai_stream_df_engineered[\"Labels\"] = 1\n",
-    "benign_stream_df_engineered[\"Labels\"] = 0"
+    "k = 5\n",
+    "kfold = KFold(n_splits=k, shuffle=True, random_state=1)"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Model Training\n",
-    "- models\n",
-    "  - xgboost\n",
-    "  - NN\n",
-    "  - k-NN\n",
-    "  - Random Forest\n",
-    "- k-fold cross validation"
+    "# randomize the data. TODO: is this needed\n",
+    "from sklearn.utils import shuffle\n",
+    "data_df = shuffle(data_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# after feature engineering, drop all the columns that are unnecessary\n",
+    "# TODO: how can I use payload_vectors???\n",
+    "data_df = data_df.drop([\"Source Port\", \"Destination Port\", \"Payload_vectors\", \"Payload\"], axis=1)\n",
+    "# data_df = data_df.drop([\"Payload\"], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# store the features and labels in separate dataframes\n",
+    "X = data_df.drop(\"Labels\", axis=1)\n",
+    "y = data_df[\"Labels\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the vector column into individual features using CountVectorizer\n",
+    "# vector_column = X['Payload']\n",
+    "# vectorizer = CountVectorizer()\n",
+    "# X_transformed = vectorizer.fit_transform(vector_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert data to array\n",
+    "data_array = data_df.to_numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = 1\n",
+    "for train, test in kfold.split(data_array):\n",
+    "    print(f\"Model {model}\")\n",
+    "    print(f\"train {train}, test: {test}\")\n",
+    "    model += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "knn_model = KNeighborsRegressor(n_neighbors=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_scores = []\n",
+    "for train, test in kfold.split(X):\n",
+    "    X_train, X_test = X.iloc[train], X.iloc[test]\n",
+    "    y_train, y_test = y.iloc[train], y.iloc[test]\n",
+    "    \n",
+    "    knn_model.fit(X_train, y_train)\n",
+    "    \n",
+    "    # evaluate model accuracy\n",
+    "    accuracy = knn_model.score(X_test, y_test)\n",
+    "    accuracy_scores.append(accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the average accuracy score across all folds\n",
+    "average_accuracy = sum(accuracy_scores) / k\n",
+    "print(\"Average accuracy:\", average_accuracy)"
    ]
   }
  ],
