fixes one-hot, adds xgboost, removes word2vec

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -11,12 +11,10 @@
     "import sweetviz as sv\n",
     "import ipaddress\n",
     "\n",
-    "\n",
     "from scapy.all import PcapReader, IP, TCP, UDP, ICMP\n",
     "from scipy.stats import ttest_ind, kstest, norm, skew, kurtosis, zscore\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
     "from skimpy import skim\n",
     "from summarytools import dfSummary\n",
@@ -61,6 +59,14 @@
    "outputs": [],
    "source": [
     "def pcap_to_dataframe(pcap_reader: PcapReader) -> pd.DataFrame:\n",
+    "    \"\"\"_summary_\n",
+    "\n",
+    "    Args:\n",
+    "        pcap_reader (PcapReader): packet capture read using scapy\n",
+    "\n",
+    "    Returns:\n",
+    "        pd.DataFrame: dataframe with pcap data\n",
+    "    \"\"\"\n",
     "    # Create an empty list to store the data\n",
     "    data = []\n",
     "\n",
@@ -628,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summaries & Visualizations"
+    "# Summaries & Visualizations"
    ]
   },
   {
@@ -692,104 +698,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Categorical\n",
-    "- one hot encoding for ports\n",
-    "- word2vec encoding for payload (add payload to `stream_df`)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add back payload after all the numeric EDA\n",
-    "mirai_stream_df_engineered = mirai_stream_df_numeric.join(mirai_df[\"Payload\"])\n",
-    "benign_stream_df_engineered = benign_stream_df_numeric.join(mirai_df[\"Payload\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create sentences from payload to use in vectorization\n",
-    "mirai_sentences = [simple_preprocess(payload) for payload in mirai_df[\"Payload\"]]\n",
-    "benign_sentences = [simple_preprocess(payload) for payload in benign_df[\"Payload\"]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mirai_model = Word2Vec(sentences=mirai_sentences, window=5, min_count=1, workers=4)\n",
-    "benign_model = Word2Vec(sentences=benign_sentences, window=5, min_count=1, workers=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mirai_stream_df_engineered[\"Payload_vectors\"] = mirai_stream_df_engineered[\n",
-    "    \"Payload\"\n",
-    "].apply(\n",
-    "    lambda payload: mirai_model.wv[simple_preprocess(payload)]\n",
-    "    if simple_preprocess(payload)\n",
-    "    else None\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "benign_stream_df_engineered"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def try_preprocess(payload, model):\n",
-    "    try:\n",
-    "        if simple_preprocess(payload):\n",
-    "            return model.wv[simple_preprocess(payload)]\n",
-    "        else:\n",
-    "            return None\n",
-    "    except KeyError:\n",
-    "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# benign_stream_df_engineered[\"Payload_vectors\"] = benign_stream_df_engineered[\"Payload\"].apply(\n",
-    "#     lambda payload: benign_model.wv[simple_preprocess(payload)]\n",
-    "#     if simple_preprocess(payload)\n",
-    "#     else None\n",
-    "# )\n",
-    "benign_stream_df_engineered[\"Payload_vectors\"] = benign_stream_df_engineered[\n",
-    "    \"Payload\"\n",
-    "].apply(lambda payload: try_preprocess(payload, benign_model))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Labeling\n",
     "We label and concatenate benign and malicious before one-hot because there are different ports in each dataset and concatenating the two after one hot will not work with different columns."
    ]
@@ -801,8 +709,8 @@
    "outputs": [],
    "source": [
     "# add labels, 0 for benign, 1 for malicious\n",
-    "mirai_stream_df_engineered[\"Labels\"] = 1\n",
-    "benign_stream_df_engineered[\"Labels\"] = 0"
+    "mirai_stream_df_numeric[\"Labels\"] = 1\n",
+    "benign_stream_df_numeric[\"Labels\"] = 0"
    ]
   },
   {
@@ -812,7 +720,7 @@
    "outputs": [],
    "source": [
     "# concatenate dataframes\n",
-    "data_df = pd.concat([mirai_stream_df_engineered, benign_stream_df_engineered], ignore_index=True)"
+    "data_df = pd.concat([mirai_stream_df_numeric, benign_stream_df_numeric], ignore_index=True)"
    ]
   },
   {
@@ -820,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature engineering categorical \n",
+    "# Feature engineering (cont.) categorical \n",
     "## One-hot"
    ]
   },
@@ -831,7 +739,7 @@
    "outputs": [],
    "source": [
     "def one_hot_encode(df, feature):\n",
-    "    feature_dummies = pd.get_dummies(df[feature], prefix=\"Source port\")\n",
+    "    feature_dummies = pd.get_dummies(df[feature], prefix=feature)\n",
     "    return pd.concat([df, feature_dummies], axis=1)"
    ]
   },
@@ -896,9 +804,7 @@
    "outputs": [],
    "source": [
     "# after feature engineering, drop all the columns that are unnecessary\n",
-    "# TODO: how can I use payload_vectors???\n",
-    "data_df = data_df.drop([\"Source Port\", \"Destination Port\", \"Payload_vectors\", \"Payload\"], axis=1)\n",
-    "# data_df = data_df.drop([\"Payload\"], axis=1)"
+    "data_df = data_df.drop([\"Source Port\", \"Destination Port\"], axis=1)"
    ]
   },
   {
@@ -910,18 +816,6 @@
     "# store the features and labels in separate dataframes\n",
     "X = data_df.drop(\"Labels\", axis=1)\n",
     "y = data_df[\"Labels\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert the vector column into individual features using CountVectorizer\n",
-    "# vector_column = X['Payload']\n",
-    "# vectorizer = CountVectorizer()\n",
-    "# X_transformed = vectorizer.fit_transform(vector_column)"
    ]
   },
   {
@@ -963,16 +857,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "accuracy_scores = []\n",
-    "for train, test in kfold.split(X):\n",
-    "    X_train, X_test = X.iloc[train], X.iloc[test]\n",
-    "    y_train, y_test = y.iloc[train], y.iloc[test]\n",
-    "    \n",
-    "    knn_model.fit(X_train, y_train)\n",
-    "    \n",
-    "    # evaluate model accuracy\n",
-    "    accuracy = knn_model.score(X_test, y_test)\n",
-    "    accuracy_scores.append(accuracy)"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf_model = RandomForestClassifier(max_depth=2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from xgboost import XGBClassifier\n",
+    "xgb_model = XGBClassifier(n_estimators=2, max_depth=2, learning_rate=1, objective='binary:logistic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_evaluate_model(model, X, y):\n",
+    "    accuracy_scores = []\n",
+    "    for train, test in kfold.split(X):\n",
+    "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
+    "        y_train, y_test = y.iloc[train], y.iloc[test]\n",
+    "        \n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        # evaluate model accuracy\n",
+    "        accuracy = model.score(X_test, y_test)\n",
+    "        accuracy_scores.append(accuracy)\n",
+    "        \n",
+    "    return accuracy_scores"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation"
    ]
   },
   {
@@ -982,8 +907,33 @@
    "outputs": [],
    "source": [
     "# Calculate the average accuracy score across all folds\n",
+    "accuracy_scores = train_evaluate_model(knn_model, X, y)\n",
     "average_accuracy = sum(accuracy_scores) / k\n",
-    "print(\"Average accuracy:\", average_accuracy)"
+    "print(\"Average accuracy k-nn:\", average_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the average accuracy score across all folds\n",
+    "accuracy_scores = train_evaluate_model(rf_model, X, y)\n",
+    "average_accuracy = sum(accuracy_scores) / k\n",
+    "print(\"Average accuracy random forest:\", average_accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the average accuracy score across all folds\n",
+    "accuracy_scores = train_evaluate_model(xgb_model, X, y)\n",
+    "average_accuracy = sum(accuracy_scores) / k\n",
+    "print(\"Average accuracy XGBoost:\", average_accuracy)"
    ]
   }
  ],
