adds evaluation and visualizations

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -877,7 +877,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_evaluate_model(model, X, y):\n",
+    "def k_fold_model(model, X, y):\n",
     "    accuracy_scores = []\n",
     "    for train, test in kfold.split(X):\n",
     "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
@@ -901,13 +901,23 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accuracy\n",
+    "\n",
+    "Accuracy is the proportion of correct predictions to the total number of predictions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the average accuracy score across all folds\n",
-    "accuracy_scores = train_evaluate_model(knn_model, X, y)\n",
+    "accuracy_scores = k_fold_model(knn_model, X, y)\n",
     "average_accuracy = sum(accuracy_scores) / k\n",
     "print(\"Average accuracy k-nn:\", average_accuracy)"
    ]
@@ -919,7 +929,7 @@
    "outputs": [],
    "source": [
     "# Calculate the average accuracy score across all folds\n",
-    "accuracy_scores = train_evaluate_model(rf_model, X, y)\n",
+    "accuracy_scores = k_fold_model(rf_model, X, y)\n",
     "average_accuracy = sum(accuracy_scores) / k\n",
     "print(\"Average accuracy random forest:\", average_accuracy)"
    ]
@@ -931,9 +941,190 @@
    "outputs": [],
    "source": [
     "# Calculate the average accuracy score across all folds\n",
-    "accuracy_scores = train_evaluate_model(xgb_model, X, y)\n",
+    "accuracy_scores = k_fold_model(xgb_model, X, y)\n",
     "average_accuracy = sum(accuracy_scores) / k\n",
     "print(\"Average accuracy XGBoost:\", average_accuracy)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Precision\n",
+    "\n",
+    "Precision measures the proportion of true positives to the total predicted positives."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model_evaluation(model, X, y, k, scorer):\n",
+    "\n",
+    "    # Perform k-fold cross-validation and calculate precision scores\n",
+    "    # precision_scores = cross_val_score(model, X, y, cv=k, scoring=scorer)\n",
+    "    model_scores = cross_val_score(model, X, y, cv=k)\n",
+    "\n",
+    "    # Calculate the average score across all folds\n",
+    "    average_score = model_scores.mean()\n",
+    "\n",
+    "    return average_precision\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.metrics import make_scorer, precision_score, recall_score\n",
+    "\n",
+    "# Assuming model is your trained model and X, y are the input features and labels respectively\n",
+    "# Set the scoring metric to precision\n",
+    "scorer = make_scorer(precision_score)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: how do we calculate precision for knn?\n",
+    "# print(\"Average Precision knn:\", model_evaluation(knn_model, X, y, k, scorer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Average Precision random forest:\", model_evaluation(rf_model, X, y, k, scorer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Average Precision xgboost\", model_evaluation(xgb_model, X, y, k, scorer))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Recall\n",
+    "\n",
+    "Recall (also known as sensitivity or true positive rate) measures the proportion of true positives to the total actual positives."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scorer = make_scorer(recall_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Average Recall knn:\", model_evaluation(knn_model, X, y, k, scorer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Average Recall random forest:\", model_evaluation(rf_model, X, y, k, scorer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Average Recall xgboost:\", model_evaluation(xgb_model, X, y, k, scorer))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Confusion matrix\n",
+    "\n",
+    "A confusion matrix is a table that visualizes the performance of a classification model by showing the counts of true positive, true negative, false positive, and false negative predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.metrics import confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(model, X, y):\n",
+    "    accuracy_scores = []\n",
+    "    for train, test in kfold.split(X):\n",
+    "        X_train, X_test = X.iloc[train], X.iloc[test]\n",
+    "        y_train, y_test = y.iloc[train], y.iloc[test]\n",
+    "        \n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)\n",
+    "        \n",
+    "        cm = confusion_matrix(y_test, y_pred)\n",
+    "        \n",
+    "        # Create a heatmap of the confusion matrix\n",
+    "        sns.heatmap(cm, annot=True, cmap=\"Blues\")\n",
+    "        plt.xlabel(\"Predicted labels\")\n",
+    "        plt.ylabel(\"True labels\")\n",
+    "        plt.title(\"Confusion Matrix\")\n",
+    "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_confusion_matrix(xgb_model, X, y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ROC curve\n",
+    "\n",
+    "TODO"
    ]
   }
  ],
