adds ai pandas and scikit

--- a/bsides_aug.ipynb
+++ b/bsides_aug.ipynb
@@ -10,7 +10,11 @@
     "import numpy as np\n",
     "import sweetviz as sv\n",
     "import ipaddress\n",
+    "import os\n",
     "\n",
+    "from dotenv import load_dotenv\n",
+    "from pandasai.llm.openai import OpenAI\n",
+    "from pandasai import PandasAI\n",
     "from scapy.all import PcapReader, IP, TCP, UDP, ICMP\n",
     "from scipy.stats import ttest_ind, kstest, norm, skew, kurtosis, zscore\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -28,8 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pcap_reader_mirai = PcapReader(\"data/mirai.pcap\")\n",
-    "pcap_reader_benign = PcapReader(\"data/benign.pcapng\")"
+    "# finds .env file and loads the vars\n",
+    "load_dotenv()\n",
+    "openai_api_key = os.getenv(\"OPENAI_API_KEY\", \"Key not found\")"
    ]
   },
   {
@@ -38,7 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(pcap_reader_benign)"
+    "pcap_reader_mirai = PcapReader(\"data/mirai.pcap\")\n",
+    "pcap_reader_benign = PcapReader(\"data/benign.pcapng\")"
    ]
   },
   {
@@ -59,7 +65,7 @@
    "outputs": [],
    "source": [
     "def pcap_to_dataframe(pcap_reader: PcapReader) -> pd.DataFrame:\n",
-    "    \"\"\"_summary_\n",
+    "    \"\"\"Converts a packet capture to a Pandas DataFrame.\n",
     "\n",
     "    Args:\n",
     "        pcap_reader (PcapReader): packet capture read using scapy\n",
@@ -185,12 +191,68 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AI\n",
+    "Use pandas AI to clean up the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: use pandas AI to ask questions from the dataframe"
+    "# Instantiate a LLM\n",
+    "llm = OpenAI(api_token=openai_api_key)\n",
+    "pandas_ai = PandasAI(llm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_cleaned_df = pandas_ai.clean_data(mirai_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benign_clean_df = pandas_ai.clean_data(benign_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_cleaned_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "benign_clean_df"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extract streams\n",
+    "Extract streams using the tuple (src_IP, src_port, dst_ip, dst_port, protocol)."
    ]
   },
   {
@@ -250,6 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: find whi timestamp is gone in the cleaned dataframes and use cleaned dataframes here\n",
     "mirai_stream_df = extract_streams(mirai_df)\n",
     "benign_stream_df = extract_streams(benign_df)"
    ]
@@ -376,135 +439,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Regression Analysis\n",
-    "\n",
-    "- Models relationship between a dependent variable and one or more independent variables\n",
-    "- Linear regression\n",
-    "  - fit data in line\n",
-    "  - calculate coefficients"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def regression_analysis(df, x_cols, y_col):\n",
-    "    X = df[x_cols].values.reshape(-1, len(x_cols))\n",
-    "    y = df[y_col].values.reshape(-1, 1)\n",
-    "    model = LinearRegression().fit(X, y)\n",
-    "    r_sq = model.score(X, y)\n",
-    "    coef = model.coef_\n",
-    "    return {\"R-squared\": r_sq, \"Coefficients\": coef}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "regression_analysis(mirai_stream_df, [\"Number of Packets\", \"Duration\"], \"Total Length\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Kolmogorov-Smirnov test\n",
-    "\n",
-    "- compare two sample distributions\n",
-    "- useful for fitting to a distribution\n",
-    "- test if two samples from a population:\n",
-    "  - came from a distribution\n",
-    "  - belong to the same distribution\n",
-    "- Uses metric `D`\n",
-    "  - max absolute difference between empirical distribution function of the samples and cumulative distribution of the reference distribution\n",
-    "- Null hypothesis: \n",
-    "  - samples came from the reference distribution\n",
-    "  - samples came from the same distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def kolmogorov_smirnov_test(df, column):\n",
-    "    sample = df[column].values\n",
-    "    _, pvalue = kstest(sample, norm.cdf, args=(sample.mean(), sample.std()))\n",
-    "    if pvalue < 0.05:\n",
-    "        return \"The distribution of {} is significantly different from a normal distribution (p < 0.05)\".format(\n",
-    "            column\n",
-    "        )\n",
-    "    else:\n",
-    "        return \"The distribution of {} is not significantly different from a normal distribution (p >= 0.05)\".format(\n",
-    "            column\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kolmogorov_smirnov_test(mirai_stream_df, \"Total Length\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Skewness and Kyrtosis\n",
-    "\n",
-    "- information about the shape of the distribution\n",
-    "- Skewness: measure the degree of asymmetry\n",
-    "  - symmetric: equally balanced around its mean\n",
-    "  - asymmetric: not equally balanced\n",
-    "  - positive skewness: distribution longer on the right side\n",
-    "  - negative skewness: longer on the left\n",
-    "  - 0: completely symmetric\n",
-    "- Kurtosis: peakedness of distribution\n",
-    "  - high: sharp peak, long tails\n",
-    "  - low: flat peak, short tails\n",
-    "  - ex. normal distribution has kurtosis 3, mesokurtic\n",
-    "    - `> 3` leptokurtic\n",
-    "    - `< 3` platykurtic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def skewness_kurtosis(df):\n",
-    "    result = {}\n",
-    "    for col in df.select_dtypes(include=[np.number]).columns:\n",
-    "        result[col + \"_skewness\"] = skew(df[col])\n",
-    "        result[col + \"_kurtosis\"] = kurtosis(df[col])\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "skewness_kurtosis(mirai_stream_df)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Outliers\n",
     "\n",
     "- observation that significantly differs from others in a dataset\n",
@@ -537,6 +471,53 @@
    "source": [
     "outliers = detect_outliers_zscore(mirai_stream_df, \"Total Length\", threshold=3)\n",
     "print(outliers)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AI\n",
+    "Explore the data with AI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_5_source_IPs = pandas_ai(mirai_df, prompt='Which are the 5 most popular source IP addresses?')\n",
+    "top_5_source_IPs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_5_dst_ports = pandas_ai(mirai_df, prompt='Which are the 5 most popular destination ports?')\n",
+    "top_5_dst_ports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas_ai.run(mirai_stream_df, prompt=\"Plot the scatter plot of stream durations and number of packets.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas_ai.run(benign_stream_df, prompt=\"Plot a barplot of top 10 destination ports.\")"
    ]
   },
   {
@@ -627,6 +608,61 @@
    "source": [
     "# check if all data types are numeric now\n",
     "mirai_stream_df_numeric.dtypes"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AI\n",
+    "Generate features using `generate_features` from `pandas_ai` on cleaned up data or subset of original due to long requests."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas_ai.generate_features(mirai_cleaned_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas_ai.generate_features(benign_clean_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_subset_df = mirai_df.loc[:1000]\n",
+    "benign_subset_df = benign_df.loc[:1000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas_ai.generate_features(mirai_subset_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pandas_ai.generate_features(benign_subset_df)"
    ]
   },
   {
@@ -751,15 +787,6 @@
    "source": [
     "data_df = one_hot_encode(data_df, \"Source Port\")\n",
     "data_df = one_hot_encode(data_df, \"Destination Port\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: use skllm or embeddings"
    ]
   },
   {
@@ -897,6 +924,89 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## AI \n",
+    "Use llm for classification. Can only use payload that is words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add labels, 0 for benign, 1 for malicious\n",
+    "mirai_cleaned_df[\"Labels\"] = 1\n",
+    "benign_clean_df[\"Labels\"] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mirai_payloads = mirai_cleaned_df[[\"Payload\", \"Labels\"]]\n",
+    "benign_payloads = benign_clean_df[[\"Payload\", \"Labels\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "payloads = pd.concat([mirai_payloads, benign_payloads], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = payloads[\"Payload\"]\n",
+    "y = payloads[\"Labels\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skllm.config import SKLLMConfig\n",
+    "\n",
+    "SKLLMConfig.set_openai_key(openai_api_key)\n",
+    "SKLLMConfig.set_openai_org(\"org-HlcxSARQUphcO0tUGmtJJOpD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skllm import ZeroShotGPTClassifier\n",
+    "\n",
+    "clf = ZeroShotGPTClassifier(openai_model=\"gpt4all::ggml-gpt4all-j-v1.3-groovy\")\n",
+    "clf.fit(X, y)\n",
+    "labels = clf.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"Accuracy: {accuracy_score(y, labels):.2f}\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Model Evaluation"
    ]
   },
@@ -1004,7 +1114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Average Precision random forest:\", model_evaluation(rf_model, X, y, k, scorer))"
+    "# print(\"Average Precision random forest:\", model_evaluation(rf_model, X, y, k, scorer))"
    ]
   },
   {
